# python_notes

./: .gitignore  lec-1.py  lec-2(str,conditional_statement).py  lec-5(loops).py  lec-6(function_and_recursion).py  lec-7(file_input_and_output).py  readme.md
DeepLearning/: ANN.md  RNN.md  Readme.md  Seq2Seq.md  Transformers.md
DeepLearning/code/: Text_generator.ipynb  batch_norm.ipynb  deep_rnns.ipynb
Django/: Readme.md  ttt.txt
Django/learnDjango/: db.sqlite3
Django/learnDjango/firstApp/: Readme.md  models.py  urls.py  views.py
Django/learnDjango/learnDjango/: Readme.md  settings.py  urls.py  views.py
Django/learnDjango/static/: Readme.md
Django/learnDjango/templates/: Readme.md  index.html  layout.html  useLayout.html
EDA/: BlackFriday.md  readdme.md
EDA/notebook/: BlackFriday.ipynb  Zomato_EDA.ipynb
Jbooks/: intro.ipynb  readme.md
Jbooks/Numpy/: lec-1.ipynb  lec-2.ipynb  lec-3.ipynb  readme.md
MachineLearning/: Readme.md
Pandas/: PandasPartOne.py  PandasPartTwo.py  readme.md
Statistics/: Readme.md  RemoveOutlier.py
Statistics/Images/: CI  hypo
Tkinter/: button.py  checkBox.py  combobox.py  entry.py  label.py  listBox.py  menuBar.py  messageBox.py  radioButton.py
XAI/: pyproject.toml  readme.md
XAI/src/: lime1.ipynb  lime2.ipynb  shap.ipynb
basics/: lec-2(str,conditional_statement).py  lec-3(list_and_tuple).py  lec-4(dictionary_and_set).py  lec-8(opps).py  lec-9(decorators).py
basics/md-to-txt/: example.md  md-to-txt.py  output.txt
sklearn/: pyproject.toml  readme.md  sklearn.ipynb
(+5 files in other folders)
